<resources>
    <string name="app_name">Kamb</string>
    <string name="splash">Splash image</string>
    <string name="title_activity_main">Kobolds Ate My Baby!</string>

    <!-- Action Menu -->
    <string name="action_settings">Settings</string>
    <string name="action_generate">Generate</string>

    <!-- Character Screen -->
    <string name="zero">0</string>
    <string name="not_set">--Not Set--</string>

    <string name="brawn">Brawn</string>
    <string name="ego">Ego</string>
    <string name="reflex">Reflexes</string>
    <string name="extra">Extra</string>

    <string name="meat">Meat</string>
    <string name="luck">Luck</string>
    <string name="cunning">Cunning</string>
    <string name="agility">Agility</string>

    <string name="edges"><u>Edges</u></string>
    <string name="bogeys"><u>Bogeys</u></string>
    <string name="defaultEdge">Night Vision</string>
    <string name="defaultBogey">Stupid as Heck</string>

    <string name="skills"><u>Skills</u></string>

    <string name="name">Name:</string>
    <string name="hit_points">Hit Points:</string>
    <string name="victory_points">Victory Points:</string>
    <string name="death_strikes">Death Cheques:</string>

    <string name="armour">Armour:</string>
    <string name="right_paw">Right Paw:</string>
    <string name="wrong_paw">Wrong Paw:</string>
    <string name="drop_item">Drop Item</string>


    <!-- Strings related to Settings -->
    <string name="title_activity_settings">Settings</string>
    <string name="pref_header_general">General</string>
    <string name="pref_title_sync_wifi">Only sync over WiFi</string>
    <string name="pref_title_languages">Transcription Language</string>
    <string-array name="pref_languages_titles">
        <item>English</item>
        <item>French</item>
        <item>German</item>
    </string-array>
    <string-array name="pref_languages_values">
        <item>en_US</item>
        <item>fr_FR</item>
        <item>de_DE</item>
    </string-array>
</resources>
