<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <!-- 2 columns -->
        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dip" >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textSize="30sp"/>

            <EditText
                android:id="@+id/name_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textFilter"
                android:hint="@string/not_set"
                android:textSize="30sp"/>
        </TableRow>
    </TableLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <!-- 2 columns -->
        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dip" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hit_points"
                android:textSize="30sp"/>

            <Button
                android:layout_height="wrap_content"
                android:layout_width="40dp"
                android:text="+"
                android:textSize="20sp"
                android:onClick="addHP"
                />

            <EditText
                android:id="@+id/hp_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:textSize="30sp"
                android:text="@string/zero"/>

            <Button
                android:layout_height="wrap_content"
                android:layout_width="40dp"
                android:text="-"
                android:textSize="20sp"
                android:onClick="loseHP"
                />
        </TableRow>

        <!-- 2 columns -->
        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dip" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/death_strikes"
                android:textSize="30sp"/>

            <Button
                android:layout_height="wrap_content"
                android:layout_width="40dp"
                android:text="+"
                android:textSize="20sp"
                android:onClick="addDeathStrike"
                />

            <EditText
                android:id="@+id/ds_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:text="@string/zero"
                android:textSize="30sp"/>

            <Button
                android:layout_height="wrap_content"
                android:layout_width="40dp"
                android:text="-"
                android:textSize="20sp"
                android:onClick="loseDeathStrike"
                />
        </TableRow>

        <!-- 2 columns -->
        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dip" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/victory_points"
                android:textSize="30sp"/>

            <Button
                android:layout_height="wrap_content"
                android:layout_width="40dp"
                android:text="+"
                android:textSize="20sp"
                android:onClick="addVP"
                />

            <EditText
                android:id="@+id/vp_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:textSize="30sp"/>

            <Button
                android:layout_height="wrap_content"
                android:layout_width="40dp"
                android:text="-"
                android:textSize="20sp"
                android:onClick="loseVP"
                />
        </TableRow>
    </TableLayout>
</LinearLayout>