<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <!-- Edges -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edges"
        android:textSize="30sp"/>
    <turkeyworks.com.kamb.Objects.MyTextView
        android:id="@+id/edgeDefault1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:onClick="showItemInfo"/>
    <turkeyworks.com.kamb.Objects.MyTextView
        android:id="@+id/edgeDefault2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/not_set"
        android:textSize="30sp"
        android:onClick="showItemInfo"/>
    <turkeyworks.com.kamb.Objects.MyTextView
        android:id="@+id/edgeRandom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/not_set"
        android:textSize="30sp"
        android:onClick="showItemInfo"/>

    <!-- Bogeys -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/bogeys"
        android:textSize="30sp"/>
    <turkeyworks.com.kamb.Objects.MyTextView
        android:id="@+id/bogeyDefault1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:onClick="showItemInfo"/>
    <turkeyworks.com.kamb.Objects.MyTextView
        android:id="@+id/bogeyDefault2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/not_set"
        android:textSize="30sp"
        android:onClick="showItemInfo"/>
    <turkeyworks.com.kamb.Objects.MyTextView
        android:id="@+id/bogeyRandom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/not_set"
        android:textSize="30sp"
        android:onClick="showItemInfo"/>
</LinearLayout>
